--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^1.2.0",
     "@angular/animations": "^14.0.0",
     "@angular/cdk": "^14.0.1",
     "@angular/common": "^14.0.0",
